fixed alignment of hashtags for non-class elements

--- a/docs/stylesheets/api_ref.css
+++ b/docs/stylesheets/api_ref.css
@@ -52,7 +52,7 @@
 
 .doc.doc-method .prefect-heading:before,
 .doc.doc-attribute .prefect-heading:before {
-    margin-top: -2px;
+    margin-top: 2px;
 }
 
 a.prefect-heading, 
